--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ uvicorn
 numpy
 joblib
 scikit-learn
-opencv-python-headless==4.8.0.76
-mediapipe==0.10.0
+opencv-python-headless
+mediapipe
 python-multipart
