--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-fastapi>=0.68.0,<0.69.0
-uvicorn>=0.15.0,<0.16.0
-numpy>=1.21.0,<1.24.0
+fastapi>=0.68.0
+uvicorn>=0.15.0
+numpy>=1.21.0
 joblib>=1.0.0
-scikit-learn>=1.0.0,<1.1.0
-opencv-python-headless>=4.5.0,<4.6.0
-mediapipe==0.8.10
+scikit-learn>=1.0.0
 python-multipart>=0.0.5
